[gd_scene format=3 uid="uid://dxerjja01tmkl"]

[ext_resource type="Script" uid="uid://duoxbdiftmava" path="res://src/buttona.gd" id="1_eewff"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eewff"]
bg_color = Color(0.8862745, 0.07058824, 0.1764706, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts572"]
bg_color = Color(0.36078432, 0.59607846, 0.13725491, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 20

[node name="Main" type="Control" unique_id=1292083688]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="." unique_id=1632626786]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.93333334, 0.93333334, 0.93333334, 1)

[node name="Label" type="Label" parent="." unique_id=1596191804]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -73.5
offset_right = 324.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8862745, 0.07058824, 0.1764706, 1)
theme_override_font_sizes/font_size = 48
text = "Will you be my valentine? ðŸŒ¹"

[node name="NoButton" type="Button" parent="." unique_id=2069734064]
custom_minimum_size = Vector2(180, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_eewff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eewff")
theme_override_styles/hover = SubResource("StyleBoxFlat_eewff")
text = "No"
script = ExtResource("1_eewff")

[node name="YesButton" type="Button" parent="." unique_id=777411899]
custom_minimum_size = Vector2(180, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ts572")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ts572")
theme_override_styles/hover = SubResource("StyleBoxFlat_ts572")
text = "Yes"
script = ExtResource("1_eewff")

[connection signal="mouse_entered" from="NoButton" to="NoButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="NoButton" to="NoButton" method="_on_mouse_exited"]
[connection signal="pressed" from="NoButton" to="NoButton" method="_on_pressed"]
[connection signal="resized" from="NoButton" to="NoButton" method="_on_resized"]
[connection signal="mouse_entered" from="YesButton" to="YesButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="YesButton" to="YesButton" method="_on_mouse_exited"]
[connection signal="pressed" from="YesButton" to="YesButton" method="_on_pressed"]
[connection signal="resized" from="YesButton" to="YesButton" method="_on_resized"]
